zero-trust-gitops-platform/policies/tests/require-probes/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: require-probes-test
policies:
  - ../../governance/require-probes.yaml
resources:
  - resource-pass.yaml
  - resource-fail.yaml
results:
  - policy: require-probes
    rule: check-probes
    resources:
      - compliant-pod
    kind: Pod
    result: pass
  - policy: require-probes
    rule: check-probes
    resources:
      - noncompliant-pod
    kind: Pod
    result: fail
